package com.hqbhoho.bigdata.design.pattern.composite;

/**
 * describe:
 *
 * @author hqbhoho
 * @version [v1.0]
 * @date 2019/12/04
 */
public interface File {
    void show();
}
